# storyblok-cnc-hackathon

./: README.md
backend/: README.md  pyproject.toml
backend/src/foodapi/: api.py
backend/src/foodapi/config/: __init__.py  logging_config.py
backend/src/foodapi/routes/: __init__.py  user_routes.py
frontend/: package-lock.json  package.json  tree.txt
frontend/src/app/: page.tsx
frontend/src/lib/: fetchStory.ts  storyblok.ts
